--- a/about.html
+++ b/about.html
@@ -735,7 +735,7 @@
   document.addEventListener('keydown', function(e){ if(e.key === 'Escape' || e.key === 'Esc') panel.classList.remove('active'); });
 })();
 </script>
-  <script src="../frontend-api.js"></script>
+  <!-- <script src="../frontend-api.js"></script> -->
   
   <!-- END: Mobile Menu Injected by updater -->
 </body>
