--- a/chatbot.html
+++ b/chatbot.html
@@ -40,7 +40,7 @@
       <button onclick="sendMessage()">Send</button>
     </div>
   </div>
-  <script src="chatbot.js"></script>
+  <!-- <script src="chatbot.js"></script> -->
   <script src="lang-style/language.js"></script>
 <!-- START: Mobile Menu Injected by updater -->
 <style>
@@ -84,7 +84,7 @@
   document.addEventListener('keydown', function(e){ if(e.key === 'Escape' || e.key === 'Esc') panel.classList.remove('active'); });
 })();
 </script>
-  <script src="./frontend-api.js"></script>
+  <!-- <script src="./frontend-api.js"></script> -->
   <!-- END: Mobile Menu Injected by updater -->
 </body>
 
