--- a/contact.html
+++ b/contact.html
@@ -593,7 +593,7 @@ if(form){
     document.addEventListener('keydown', function(e){ if(e.key === 'Escape' || e.key === 'Esc') panel.classList.remove('active'); });
 })();
 </script>
-    <script src="../frontend-api.js"></script>
+    <!-- <script src="../frontend-api.js"></script> -->
     
     <!-- END: Mobile Menu Injected by updater -->
 </body>
