Remove all demo/testing mode code from project - prod-only setup

--- a/auth.html
+++ b/auth.html
@@ -233,20 +233,7 @@
 
 
         <div class="captcha-container">
-          <!--
-            Using Google's reCAPTCHA test site key for local development.
-            The test key always passes verification and is safe to use on localhost:
-            Site key: 6LeIxAcTAAAAAJcZVRqyHh71UMIEGNQ_MXjiZKhI
-            Secret key: 6LeIxAcTAAAAAGG-vFI1TnRWxMZNFuojJ4WifJWe
-            Replace with your production site key when deploying and configure domains
-            in the Google reCAPTCHA admin console.
-          -->
-          <!--
-            You can put your production site key into the `data-prod-sitekey` attribute below
-            (leave blank for now). The JS will prefer it in non-dev environments.
-            Example: data-prod-sitekey="YOUR_PRODUCTION_SITE_KEY"
-          -->
-          <div class="g-recaptcha" data-sitekey="6LeIxAcTAAAAAJcZVRqyHh71UMIEGNQ_MXjiZKhI" data-prod-sitekey=""></div>
+          <div class="g-recaptcha" data-sitekey="YOUR_SITE_KEY_HERE" data-prod-sitekey="YOUR_PRODUCTION_SITE_KEY"></div>
         </div>
         <button type="submit" class="btn">Register</button>
         <div id="registerMessage" class="form-message" aria-live="polite"></div>
@@ -274,20 +261,7 @@
         </div>
 
         <div class="captcha-container">
-          <!--
-            Using Google's reCAPTCHA test site key for local development.
-            The test key always passes verification and is safe to use on localhost:
-            Site key: 6LeIxAcTAAAAAJcZVRqyHh71UMIEGNQ_MXjiZKhI
-            Secret key: 6LeIxAcTAAAAAGG-vFI1TnRWxMZNFuojJ4WifJWe
-            Replace with your production site key when deploying and configure domains
-            in the Google reCAPTCHA admin console.
-          -->
-          <!--
-            You can put your production site key into the `data-prod-sitekey` attribute below
-            (leave blank for now). The JS will prefer it in non-dev environments.
-            Example: data-prod-sitekey="YOUR_PRODUCTION_SITE_KEY"
-          -->
-          <div class="g-recaptcha" data-sitekey="6LeIxAcTAAAAAJcZVRqyHh71UMIEGNQ_MXjiZKhI" data-prod-sitekey=""></div>
+          <div class="g-recaptcha" data-sitekey="YOUR_SITE_KEY_HERE" data-prod-sitekey="YOUR_PRODUCTION_SITE_KEY"></div>
         </div>
         <button type="submit" class="btn">Sign In</button>
         <div id="loginMessage" class="form-message" aria-live="polite"></div>
