Remove all hardcoded test users and sample data - complete cleanup

--- a/admin.html
+++ b/admin.html
@@ -81,8 +81,8 @@
                                     </svg>
                                 </div>
                                 <div class="notification-content-small">
-                                    <p><strong>Sanju Talukder</strong> joined the system</p>
-                                    <span class="time">7 hours ago</span>
+                                    <p><strong>User</strong> joined the system</p>
+                                    <span class="time">Recently</span>
                                 </div>
                             </a>
                             <a href="#" class="notification-item">
@@ -92,11 +92,11 @@
                                     </svg>
                                 </div>
                                 <div class="notification-content-small">
-                                    <p><strong>Piyush Thakur</strong> requested KYC verification</p>
-                                    <span class="time">8 hours ago</span>
+                                    <p><strong>User</strong> requested KYC verification</p>
+                                    <span class="time">Recently</span>
                                 </div>
                             </a>
-                            <a href="#" class="notification-item">
+                            <a href="#" class="notification-item" style="display: none;">
                                 <div class="notification-icon-small user-plus">
                                     <svg width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
                                         <path d="M16 21v-2a4 4 0 0 0-4-4H5a4 4 0 0 0-4 4v2"></path>
@@ -106,7 +106,7 @@
                                     </svg>
                                 </div>
                                 <div class="notification-content-small">
-                                    <p><strong>Madison Lopez</strong> joined the system</p>
+                                    <p><strong>User</strong> joined the system</p>
                                     <span class="time">2 days ago</span>
                                 </div>
                             </a>
@@ -424,86 +424,7 @@
                                 </tr>
                             </thead>
                             <tbody>
-                                <tr>
-                                    <td>#TXN-12345</td>
-                                    <td>
-                                        <div class="user-cell">
-                                            <div class="user-avatar">ST</div>
-                                            <span>Sanju Talukder</span>
-                                        </div>
-                                    </td>
-                                    <td><strong>$1,250.00</strong></td>
-                                    <td><span class="badge-type deposit">Deposit</span></td>
-                                    <td><span class="badge success">Completed</span></td>
-                                    <td>2025-01-08 14:30</td>
-                                    <td>
-                                        <button class="action-btn" onclick="viewTransaction('12345')">View</button>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td>#TXN-12344</td>
-                                    <td>
-                                        <div class="user-cell">
-                                            <div class="user-avatar">PT</div>
-                                            <span>Piyush Thakur</span>
-                                        </div>
-                                    </td>
-                                    <td><strong>$850.50</strong></td>
-                                    <td><span class="badge-type withdrawal">Withdrawal</span></td>
-                                    <td><span class="badge pending">Pending</span></td>
-                                    <td>2025-01-08 12:15</td>
-                                    <td>
-                                        <button class="action-btn" onclick="viewTransaction('12344')">View</button>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td>#TXN-12343</td>
-                                    <td>
-                                        <div class="user-cell">
-                                            <div class="user-avatar">ML</div>
-                                            <span>Madison Lopez</span>
-                                        </div>
-                                    </td>
-                                    <td><strong>$2,500.00</strong></td>
-                                    <td><span class="badge-type investment">Investment</span></td>
-                                    <td><span class="badge success">Completed</span></td>
-                                    <td>2025-01-08 10:45</td>
-                                    <td>
-                                        <button class="action-btn" onclick="viewTransaction('12343')">View</button>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td>#TXN-12342</td>
-                                    <td>
-                                        <div class="user-cell">
-                                            <div class="user-avatar">UK</div>
-                                            <span>Ugwu Kingsley</span>
-                                        </div>
-                                    </td>
-                                    <td><strong>$450.00</strong></td>
-                                    <td><span class="badge-type deposit">Deposit</span></td>
-                                    <td><span class="badge failed">Failed</span></td>
-                                    <td>2025-01-08 09:20</td>
-                                    <td>
-                                        <button class="action-btn" onclick="viewTransaction('12342')">View</button>
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td>#TXN-12341</td>
-                                    <td>
-                                        <div class="user-cell">
-                                            <div class="user-avatar">OK</div>
-                                            <span>Oussama Kal</span>
-                                        </div>
-                                    </td>
-                                    <td><strong>$3,200.00</strong></td>
-                                    <td><span class="badge-type investment">Investment</span></td>
-                                    <td><span class="badge success">Completed</span></td>
-                                    <td>2025-01-07 16:55</td>
-                                    <td>
-                                        <button class="action-btn" onclick="viewTransaction('12341')">View</button>
-                                    </td>
-                                </tr>
+                                <!-- Sample transaction data removed - load from API -->
                             </tbody>
                         </table>
                     </div>
@@ -534,18 +455,7 @@
                                 </tr>
                             </thead>
                             <tbody>
-                                <tr>
-                                    <td>#CUST001</td>
-                                    <td>John Doe</td>
-                                    <td>john@example.com</td>
-                                    <td>+1234567890</td>
-                                    <td>2025-01-01</td>
-                                    <td><span class="badge success">Active</span></td>
-                                    <td>
-                                        <button class="action-btn" onclick="editCustomer('1')">Edit</button>
-                                        <button class="action-btn" onclick="deleteCustomer('1')">Delete</button>
-                                    </td>
-                                </tr>
+                                <!-- Sample customer data removed - load from API -->
                             </tbody>
                         </table>
                     </div>
@@ -570,14 +480,7 @@
                                 </tr>
                             </thead>
                             <tbody>
-                                <tr>
-                                    <td>#CUST001</td>
-                                    <td>Sanju Talukder</td>
-                                    <td>sanju@example.com</td>
-                                    <td>2025-01-09 10:30</td>
-                                    <td><span class="badge success">Active</span></td>
-                                </tr>
-                            </tbody>
+                                <!-- Sample active customer data removed - load from API -->
                         </table>
                     </div>
                 </div>
@@ -756,13 +659,7 @@
                                 </tr>
                             </thead>
                             <tbody>
-                                <tr>
-                                    <td>#KYC001</td>
-                                    <td>Piyush Thakur</td>
-                                    <td><span class="badge warning">Pending</span></td>
-                                    <td>2025-01-08</td>
-                                    <td><button class="action-btn" onclick="viewKycDetails('1')">View</button></td>
-                                </tr>
+                                <!-- Sample KYC data removed - load from API -->
                             </tbody>
                         </table>
                     </div>
