--- a/auth.html
+++ b/auth.html
@@ -16,7 +16,8 @@
   <link rel="stylesheet" href="auth.css" />
   <link rel="stylesheet" href="language.css" />
   
-
+  <!-- reCAPTCHA v2 -->
+  <script src="https://www.google.com/recaptcha/api.js" async defer></script>
 </head>
 
 <body>
@@ -125,6 +126,11 @@
             regulatory purpose in accordance with GDPR</label>
         </div>
 
+        
+        <div class="captcha-container" style="margin: 20px 0;">
+          <div class="g-recaptcha" data-sitekey="YOUR_RECAPTCHA_SITE_KEY"></div>
+        </div>
+
         <button type="submit" class="btn">Register</button>
         <div id="registerMessage" class="form-message" aria-live="polite"></div>
 
@@ -148,6 +154,11 @@
         <div class="options">
           <label><input type="checkbox" id="rememberMe"> Remember me</label>
           <a href="#">Forgot Password?</a>
+        </div>
+
+        
+        <div class="captcha-container" style="margin: 20px 0;">
+          <div class="g-recaptcha" data-sitekey="YOUR_RECAPTCHA_SITE_KEY"></div>
         </div>
 
         <button type="submit" class="btn">Sign In</button>
